--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
         // --- 2. RAZORPAY CONFIG ---
         var options = {
-            "key": "YOUR_RAZORPAY_KEY_ID", 
+            "key": "rzp_live_RvwM02VxkcMMzE", 
             "amount": "9900", 
             "currency": "INR",
             "name": "The Billion Club",
@@ -400,4 +400,5 @@
     </script>
 
 </body>
+
 </html>
