--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 
-    <style>
+    <style>https://github.com/reshabsaksham28/billion-club/edit/main/index.html
         /* --- CORE VARIABLES --- */
         :root {
             --bg-body: #050505;
@@ -412,5 +412,6 @@
 </body>
 
 </html>
+
 
 
